<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/mytext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/title"
            android:gravity="center"

            app:layout_constraintBottom_toBottomOf="@id/solution_button"
            app:layout_constraintStart_toEndOf="@id/last_button"
            app:layout_constraintEnd_toStartOf="@id/next_button"
            app:layout_constraintTop_toBottomOf="parent"/>

    <Button
            android:id="@+id/last_button"
            android:theme="@style/AppTheme"
            android:text="@string/last"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:visibility="gone"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:id="@+id/next_button"
            android:theme="@style/AppTheme"
            android:text="@string/next"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:visibility="gone"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/solution_button"
            android:theme="@style/AppTheme"
            android:text="@string/solution"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:visibility="gone"

            app:layout_constraintBottom_toBottomOf="@id/last_button"
            app:layout_constraintStart_toEndOf="@id/last_button"
            app:layout_constraintEnd_toStartOf="@id/next_button"/>

    <Button
            android:id="@+id/restart_button"
            android:text="@string/restart"
            android:layout_height="75dp"
            android:layout_width="0dp"
            android:visibility="gone"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/last_button"
            app:layout_constraintEnd_toStartOf="@+id/next_button"/>

    <Button
            android:id="@+id/leave_button"
            android:text="@string/leave"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:visibility="gone"

            app:layout_constraintBottom_toBottomOf="@id/last_button"
            app:layout_constraintStart_toEndOf="@id/last_button"
            app:layout_constraintEnd_toStartOf="@id/next_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>